fix width of canvas to not display offscreen

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
-#root {
+#root, html, body {
   margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.scene-container {
+  width: 100%;
+  height: 100%;
+}
+
+.canvas-container {
+  width: 100%;
   height: 100%;
 }
